# xcore

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  PENTEST_REPORT.md  README.md  RETEST_REPORT.md  ROADMAP_PROGRESS.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_AUDIT_REPORT.md  SECURITY_FIX_TASKS.md  alembic.ini  analyse_rapport.md  app.py  appcfg.py  benchmark.json  confi  config.json  config.py  config_test.json  coverage.xml  dependencies.py  executed_roadmap.md  explain.md  generate_report.py  import_declaration.json  index.html  index2.html  inspect.json  integration.md  integration.yaml  main.py  makefile  mkdocs.yml  pyproject.toml  (+12 more)
.Jules/: palette.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  codeql.yml  docs.yml  labeler.yml  pr.yml  pull_request_template.md  release.yml  security.yml
.jules/: bolt.md  sentinel.md
admin/: dependencies.py  models.py  routes.py  schemas.py  service.py
alembic/: env.py
alembic/versions/: 034764ac3bae_this_is_main_eliezer.py  9fafeaad0fda_add_opttable_modelsv1.py  a5b40212015a_hello.py
auth/: __init__.py  dependencies.py  init_root.py  models.py  routes.py  schemas.py  service.py  users.py
backgroundtask/: taskplugins.py
cache/: __init__.py  cached.py
configurations/: base.py  core.py  manager.py
data/: __init__.py
data/crud/: __init__.py  users.py
data/models/: __init__.py  users.py
data/routes/: users.py
data/schemas/: users.py
database/: __init__.py  db.py
devops/: Dockerfile  docker-compose.yml  nginx.conf
doc/: DOCS-README.md  README.md  auth_plugin.md  best-practices.md  changelog.md  index.md  installation.md  mkdocs.yml  quickstart.md  requirements.txt  versions.md  vision.md  why-xcore.md
doc/advanced/: middleware-internals.md  middleware.md  multi-tenancy.md  registry.md
doc/api/: README.md
doc/architecture/: decisions.md  overview.md
doc/cli/: cli.md  index.md  reference.md
doc/deployment/: guide.md
doc/development/: contributing.md  testing.md
doc/examples/: README.md  auth-example.md  basic-plugin.md  complete-plugin.md  full-app.md  overview.md  sandbox-example.md  sandboxed-plugin.md  scheduler-example.md  tenancy-example.md  trusted-plugin.md
doc/getting-started/: installation.md  quickstart.md
doc/guides/: creating-plugins.md  creating-services.md  events.md  marketplace.md  middlewares.md  monitoring.md  plugin-manifest.md  scaling.md  security.md  services.md  tenancy.md  troubleshooting.md
doc/kernel/: context.md  execution-modes.md  kernel.md
doc/observability/: observability.md
doc/plugins/: development-guide.md  events-hooks.md  permissions.md  plugin-anatomy.md  sandboxed-plugins.md  trusted-plugins.md
doc/reference/: api.md  benchmarks.md  cli.md  configuration.md  sdk.md  xcore-config.md
doc/sdk/: concepts.md
doc/security/: security.md
doc/services/: cache.md  custom-services.md  database.md  scheduler.md  services.md  xworker.md
doc/stylesheets/: extra.css
docgen/: aggregator.py  composer.py  config.yaml  hasher.py  pipeline.py  scanner.py  summarizer.py
docgen/cache/: summaries.json
docs/: 404.html  CNAME  DEVELOPMENT.md  GEMINI.md  INDEX.md  Makefile  admin.md  appcfg.md  architecture.md  auth.md  backgroundtask.md  cache.md  conf.py  configurations.md  database.md  glossary.md  index.html  index.md  loggers.md  manager.md  middleware.md  mkdocs.yml  otpprovider.md  plugins.md  requirements-docs.txt  requirements.txt  security.md  sitemap.xml  tools.md  xcore.md
docs-tech/: README.md  architecture_audit_report.md  index.md  requirements.txt  scaling_analysis.md
docs-tech/architecture/: overview.md
docs-tech/deployment/: guide.md
docs-tech/development/: testing.md
docs-tech/examples/: README.md  basic-plugin.md  sandboxed-plugin.md  trusted-plugin.md
docs-tech/getting-started/: quickstart.md
docs-tech/guides/: events.md  marketplace.md  scaling.md  security.md  troubleshooting.md
docs-tech/reference/: api.md  cli.md  sdk.md
docs/_static/: custom.css  custom.js
docs/api/: index.html
docs/concepts/: plugins-vs-extensions.md  scheduler-concepts.md
docs/configurations/: INDEX.md  __init__.md  base.md  core.md  deps.md  manager.md  middleware.md  migrations.md  plugins.md  redis.md  secure.md
docs/css/: custom.css
docs/development/: code-style.md  contribution-guide.md  testing.md
docs/examples/: basic-plugin.md  complete-plugin.md  index.html
docs/guides/: creating-plugins.md  events.md  security.md
docs/hooks/: INDEX.md  __init__.md  hooks.md  utils.md
docs/integration/: INDEX.md  __init__.md
docs/js/: custom.js
docs/main/: INDEX.md  __init__.md  appcfg.md  manager.md
docs/reference/: api-endpoints.md  commands.md  config-options.md  plugin-anatomy.md
docs/sandbox/: INDEX.md  manager.md  router.md
docs/source/: README.md  (+23 more)
events/: plugin.json
examples/: README.md
frontend/: config.py
hooks/: hooks.py  utils.py
integrations/: __init__.py  conf.py  db.py  integrate.py  runtimer.py
loggers/: __init__.py  logger_config.py
manager/: __init__.py  conf.py  runtimer.py
middleware/: access_control_Middleware.py
otpprovider/: models.py  routes.py  schemas.py  service.py  utils.py
plugins/: __init__.py
plugins/events/: models.py  plugin.json  pyproject.toml  requirements.txt  run.py
plugins/note/: README.md  plugin.sig  plugin.yaml  pyproject.toml
plugins/note/data/: notes.json
plugins/note/src/: main.py
scripts/: benchmarks.py
security/: __init__.py  conf.py  hash.py  token.py
security_exploits/: test_ast.py  test_runtime.py  verify_security.py
templates/: index.html
test/: conftest.py  test_cache.py  test_loader.py
tests/: README.md  conftest.py  pytest.ini  test_auth_plugin.py  test_sandbox.py  verify_audit_log.py  verify_marketplace_output.py  verify_marketplace_ui.py
tools/: __init__.py  auto_migrate.py  migrate.py  migration_utils.py  model_discovery.py
xcore/: __init__.py  __version__.py  appcfg.py  events.py  hooks.py  index.html  manage.py  manager.py  middleware.py  view.py
(+539 files in other folders)
