[project]
name = "xcore"
version = "2.3.0"
description = "Plugin-first orchestration framework built on FastAPI"
authors = [
    { name = "Eliezer Traore", email = "68350805+traoreera@users.noreply.github.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<4.0"

dependencies = [
    # SDK (external)
    "xcoresdk @ git+https://github.com/xcore-team/xcoreSDK.git@main",
    # external cli
    "xcoreCli @ git+https://github.com/xcore-team/xcoreCli.git@main",

    # Web
    "fastapi[standard]>=0.135.1,<1.0.0",
    "uvicorn>=0.38.0,<1.0.0",

    # Data validation
    "pydantic[email]>=2.11.7,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",

    # Database & ORM
    "sqlalchemy>=2.0.41,<3.0.0",
    "alembic>=1.16.1,<2.0.0",
    "psycopg2>=2.9.11,<3.0.0",
    "aiosqlite>=0.22.1,<1.0.0",

    # Cache
    "redis[hiredis]>=7.0.0,<8.0.0",

    # Scheduling
    "apscheduler>=3.11.0,<4.0.0",

    # Configuration & environment
    "python-dotenv>=1.1.0,<2.0.0",
    "pyyaml>=6.0.3,<7.0.0",

    # Observability & utilities
    "rich>=14.0.0,<15.0.0",
    "celery>=5.6.3,<6.0.0",
]

# ── Build system ──────────────────────────────────────────────────────────────

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# ── Development dependencies ──────────────────────────────────────────────────

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^9.0.3"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.1.0"
pytest-benchmark = "^5.2.3"
httpx = "^0.28.1"
aiohttp = "^3.13.3"
faker = "^37.8.0"

# Benchmarking
psutil = "^7.0.0"

# Linting & formatting
black = "^26.3.1"
isort = "^8.0.1"
flake8 = "^7.3.0"
autoflake = "^2.3.1"
autopep8 = "^2.3.2"

# Security audit
bandit = "^1.8.6"

# Hooks
pre-commit = "^4.6.0"

# ── Docs dependencies ─────────────────────────────────────────────────────────

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.3"
mkdocs-minify-plugin = "^0.8.0"
mkdocstrings = "^1.0.3"
mkdocstrings-python = ">=2.0.3,<3.0.0"
markdown = "^3.8.2"

# ── Tool configuration ────────────────────────────────────────────────────────

[tool.flake8]
max-line-length = 88

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
