[project]
name = "events"
version = "0.1.0"
description = ""
authors = [
    {name = "Eliezer Traore",email = "traoreera@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
"rich>=13.5.2,<14.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
