[tool.poetry]
name = "notes-manager"
version = "1.0.0"
description = "Plugin sandboxed de gestion de notes"
authors = ["Exemple"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# Pas de dépendances externes — stdlib uniquement

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"